[package]
name = "hashing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.137", features=["derive"]}
argon2 = {version="0.4.0", features=["password-hash"]}
secrecy = "0.8.0"
sha3 ="*"
serde_json="*"
uuid = "1.0.0"
rand = "0.8.5"